--- a/css/normalizer.css
+++ b/css/normalizer.css
@@ -2,8 +2,27 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
+@font-face {
+  font-family: "Gotham-Bold";
+  src: url("Gotham-Bold.otf"); }
+
+@font-face {
+  font-family: "gotham-rounded-light";
+  src: url("gotham-rounded-light.otf"); }
+
+ 
+body {
+    font-family: "gotham-rounded-light", Arial, Helvetica, sans-serif; }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Gotham-Bold", Arial, Helvetica, sans-serif; }
 
 a {
   text-decoration: none;
