--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -186,18 +186,15 @@
 
 .swipe:hover {
   background-color: var(--color5);
-  color: var(--color3)
+  color: var(--color3);
 }
+
 .tittle {
-  color: var(--color2)
+  color: var(--color2);
 }
 
 .brands {
   background-color: var(--color4);
-}
-
-.bg {
-  background-color: var(--color2);
 }
 
 .block-title {
@@ -210,6 +207,22 @@
 
 .toolbar {
   background-color: var(--color4);
+}
+
+.btn-add {
+  border: 1px solid var(--color2);
+  padding: 0.5em;
+}
+
+.btn {
+  display: inline-block;
+  padding: 0.2rem;
+  width: 1.5rem;
+  height: 1.4rem;
+  border-radius: 4px;
+  color: var(--color2);
+  font-size: 0.7rem;
+  cursor: pointer;
 }
 
 /*
@@ -238,8 +251,8 @@
     height: 16rem;
   }
 
-  .slide {
-    display: none
+  .sort {
+    display: none;
   }
 }
 
@@ -254,7 +267,7 @@
   }
 
   .slide {
-    display: none
+    display: 
   }
 }
 
