dix stylesheet font family and bg-color class

--- a/css/normalizer.css
+++ b/css/normalizer.css
@@ -4,17 +4,9 @@
   box-sizing: border-box;
 }
 
-@font-face {
-  font-family: "Gotham-Bold";
-  src: url("Gotham-Bold.otf"); }
-
-@font-face {
-  font-family: "gotham-rounded-light";
-  src: url("gotham-rounded-light.otf"); }
-
- 
 body {
-    font-family: "gotham-rounded-light", Arial, Helvetica, sans-serif; }
+  font-family: "gotham-rounded-light", Arial, Helvetica, sans-serif; 
+}
 
 h1,
 h2,
@@ -22,7 +14,8 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Gotham-Bold", Arial, Helvetica, sans-serif; }
+  font-family: "Gotham-Bold", Arial, Helvetica, sans-serif; 
+}
 
 a {
   text-decoration: none;
