--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,4 +1,4 @@
-/*
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  /*
 ===========================================================
                        GENERAL STYLES
  ==========================================================
@@ -115,6 +115,12 @@
                      Main
  ==========================================================
 */
+
+.sale-info {
+  height: 300px;
+  margin: 0 auto;
+  background-color: var(--color3);
+}
 
 .btn-color {
   background-color: var(--color2);
