remove the ul with links of images on bottom section and add brands images instead

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -221,6 +221,10 @@
   cursor: pointer;
 }
 
+.brands {
+  margin-top: 0.2rem;
+}
+
 /*
 ===========================================================
                      FOOTER
